# fastapi-with-docker

./: .dockerignore  .gitignore  Dockerfile  app.py  commands.md  docker-compose.yaml  pyproject.toml  requirements.txt
authentication/: auth.py
database/: schema.py
exceptions/: custom_exception.py
repository/: user.py
routers/: auth.py  user.py
utils/: query.py  upload.py
