[tool.poetry]
name = "fastapi with docker "
version = "0.1.0"
description = "A simple fastapi implemetattion with docker"
authors = ["dakohhh <wiizzydreadmill@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
PyJWT = "^2.8.0"
bcrypt = "^4.1.2"
mongoengine = "^0.28.2"
python-dotenv = "^1.0.1"
email-validator = "^2.1.1"
certifi = "^2024.2.2"
beanie = "^1.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
